# mindhall

mindhall-api/: .gitignore  main.py  pyproject.toml
mindhall-api/src/: __init__.py  lifespan.py  main.py
mindhall-api/src/application/agent/: graph_builder.py
mindhall-api/src/application/agent/mappers/: __init__.py  message_mapper.py
mindhall-api/src/application/agent/nodes/: connector.py  llm_node.py  summarize_context.py  summarize_conversation.py  tool.py
mindhall-api/src/application/agent/prompts/: context_summary_prompt.py  extend_summary_prompt.py  mind_character_card_prompt.py  summary_prompt.py  system_prompt.py
mindhall-api/src/application/agent/states/: agent_state.py
mindhall-api/src/application/agent/tools/: __init__.py  sum.py
mindhall-api/src/infra/config/: __init__.py  settings.py
mindhall-api/src/infra/llm/: client.py
mindhall-api/src/presentation/api/: dependencies.py
mindhall-api/src/presentation/api/routes/: chat.py
mindhall-api/src/presentation/schemas/: __init__.py  chat.py
mindhall-ui/mindhall/: log.js  pnpm-lock.yaml
