[project]
name = "mindhall-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "groq>=1.0.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
